# AlgorithmicTrading

./: README.md
src/: CMakeLists.txt  Makefile
src/doc/: dvi.html
src/model/: abstract_formula.h  cubic_splines.cc  cubic_splines.h  gauss.cc  gauss.h  least_squares.cc  least_squares.h  newton.cc  newton.h
src/other/: matrix.h  qcustomplot.cpp  qcustomplot.h
src/tests/: test.cc
src/view/: approx_dialog.cc  approx_dialog.h  interpol_dialog.cc  interpol_dialog.h  mainwindow.cc  mainwindow.h  mainwindow.ui
